[gd_scene load_steps=7 format=2]

[ext_resource path="res://Center.gd" type="Script" id=1]
[ext_resource path="res://assets/ballBlue_10.png" type="Texture" id=2]
[ext_resource path="res://ParticleScript.gd" type="Script" id=3]
[ext_resource path="res://TimerScript.gd" type="Script" id=4]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 1.38729e-43
orbit_velocity = 0.1
orbit_velocity_random = 1.0
scale = 6.0
scale_random = 1.0
color = Color( 0.603922, 0.0509804, 0.717647, 1 )
hue_variation = 0.01
hue_variation_random = 1.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 35.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 1.0
angular_velocity = -2.08444e+09
orbit_velocity = 0.1
orbit_velocity_random = 1.0
scale = 7.0
scale_random = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Center" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0.298039, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="ParticleScript" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="ParticleScript"]
z_index = -1
amount = 300
process_material = SubResource( 1 )

[node name="Particles2D2" type="Particles2D" parent="ParticleScript"]
amount = 80
process_material = SubResource( 2 )

[node name="TimerScript" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="TimerScript"]
autostart = true
[connection signal="timeout" from="TimerScript/Timer" to="." method="_on_Timer_timeout"]
